add: meta property

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="type" content="Personal Website">
+    <meta name="url" content="https://dimas-saputra-me.github.io/Personal-Website/">
+    <meta name="title" content="Dimas Saputra">
+    <meta name="description" content="Know ME More">
+    <meta name="image" content="https://dimas-saputra-me.github.io/Personal-Website/assets/dimas-saputra.jpeg">
+    <meta name="image:width" content="1200">
+    <meta name="image:height" content="630">
+    <meta name="image:alt" content="Personal Website">
+    <meta name="site_name" content="Dimas Saputra | Personal Website">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Personal Website - Dimas Saputra</title>
